# ModernCpp_Tutorial

./: .gitignore  README.md
video1/: CMakeLists.txt  README.md  main.cpp
video10/: README.md  main.cpp
video11/: README.md  main.cpp
video12/: README.md  main.cpp
video13/: CMakeLists.txt  README.md  TodoList.hpp  main.cpp  tests.cpp
video14/: README.md  main.cpp
video15/: CMakeLists.txt  README.md  main.cpp  tests.cpp
video2/: CMakeLists.txt  README.md  main.cpp  my_module.cpp
video3/: CMakeLists.txt  README.md  file_module.cpp  main.cpp
video3/.cache/clangd/index/: file_module.cpp.A83FE00D2CF9BF13.idx  main.cpp.D4E30EC289D89310.idx
video4/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
video5/: README.md  main.cpp
video6/: CMakeLists.txt  Calculator.cpp  Calculator.hpp  README.md  main.cpp
video7/: README.md  main.cpp
video8/: CMakeLists.txt  README.md  main.cpp
video9/: CMakeLists.txt  CSVParser.cpp  CSVParser.hpp  README.md  data.csv  main.cpp
